basic image grid

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,12 +15,14 @@
     />
 
     <link rel="stylesheet" href="/static/css/main.css" />
+    <link rel="stylesheet" href="/static/css/imagegrid.css" />
 </head>
 
 <body>
 <div class="container">
     <h1>Maryland Maps</h1>
     <div id="viz"></div>
+    <div id="image-grid"></div>
 </div>
 
 <script type="module" src="/static/js/main.js"></script>
