--- a/static/css/imagegrid.css
+++ b/static/css/imagegrid.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    width: 100%;
+    align-items: center;
 }
 .grid-image {
-    flex: 1 0 auto;
+    flex: 0 0 auto;
     padding: 5px;
 }
