--- a/templates/index.html
+++ b/templates/index.html
@@ -20,9 +20,18 @@
 
 <body>
 <div class="container">
-    <h1>Maryland Maps</h1>
-    <div id="viz"></div>
-    <div id="image-grid"></div>
+    <div class="header">
+        <h1>Maryland Maps</h1>
+    </div>
+    <div class="main">
+        <div class="sidebar">
+            <h3>Location</h3>
+            <h3>Year</h3>
+            <h3>Type of Map</h3>
+            <h3>Interactivity</h3>
+        </div>
+        <div id="image-grid"></div>
+    </div>
 </div>
 
 <script type="module" src="/static/js/main.js"></script>
