--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
 
 :root {
-
+    --sidebar-width: 250px;
 }
 
 * {
@@ -10,4 +10,35 @@
 
 h1 {
     font-weight: bolder;
+}
+
+/* layout of sections */
+.header {
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+.container {
+    width: 100%;
+    max-width: none;
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+.main {
+    margin-left: var(--sidebar-width);
+    padding: 0;
+}
+
+.sidebar {
+    width: var(--sidebar-width);
+    z-index: 1;
+    position: fixed;
+    left: 0;
+    overflow-x: hidden;
+    padding: 20px;
 }
