backend filtering initial commit
added checkboxes to index.html, TODO in main.js, transformed data to get columns able to be filtered on (no nulls and standard dType).

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,15 @@
             <h3>Location</h3>
             <h3>Year</h3>
             <h3>Type of Map</h3>
+              <input type="checkbox" name="Historic" onclick="select1();" checked>
+              <label for="Historic">Historic</label>
+              <input type="checkbox" name="Thematic" onclick="select1();" checked>
+              <label for="Thematic">Thematic</label>
+            <br> 
+              <input type="checkbox" name="Regional" onclick="select1();" checked>
+              <label for="Regional">Regional</label >
+              <input type="checkbox" name="Other" onclick="select1();" checked>
+              <label for="Other">Other</label >
             <h3>Interactivity</h3>
         </div>
         <div id="image-grid"></div>
