--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
 
 :root {
-    --sidebar-width: 250px;
+    --sidebar-width: 375px;
 }
 
 * {
@@ -10,17 +10,11 @@
 
 h1 {
     font-weight: bolder;
+    font-size: x-large;
+    margin-right: 1em;
 }
 
 /* layout of sections */
-.header {
-    position: sticky;
-    top: 0;
-    z-index: 2;
-    padding-top: 1em;
-    padding-bottom: 1em;
-}
-
 .container {
     width: 100%;
     max-width: none;
@@ -34,11 +28,16 @@ h1 {
     padding: 0;
 }
 
-.sidebar {
+/* sidebar and subcomponents */
+sidebar {
+    position: absolute;
+    left: 0;
     width: var(--sidebar-width);
     z-index: 1;
-    position: fixed;
-    left: 0;
     overflow-x: hidden;
     padding: 20px;
+}
+label {
+    font-size: small;
+    word-wrap: normal;
 }
