fixed clicks not firing issue

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,7 @@
     </nav>
     <div class="main">
         <filters></filters>
+        <image-grid></image-grid>
         <div id="image-grid"></div>
     </div>
 </div>
