better merge fixes

--- a/templates/details.html
+++ b/templates/details.html
@@ -64,7 +64,7 @@ function createButton(){
       .join("button")
       .text(d => d)
       .on("click", (e, attributeName) => {
-        window.open("http://127.0.0.1:8080/homepage");
+        window.open("http://127.0.0.1:8080/");
         fetch(urlbt);
       });
 }
