--- a/templates/details.html
+++ b/templates/details.html
@@ -52,6 +52,9 @@
 </div>
 
 <script>
+var thisURL = document.URL;      
+var getval =thisURL.split('?')[1];    
+var title_val= getval.split("=")[1];  
 let title_val="ba-057";
 
 // let a = localStorage.getItem("data-scraper/"+title_val);
