--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,13 +14,6 @@ h1 {
     margin-right: 1em;
 }
 
-h4 {
-    font-size:medium;
-    font-weight:normal;
-    color: darkblue;
-    background-color: darkgray;
-}
-
 /* layout of sections */
 .container {
     width: 100%;
@@ -45,18 +38,18 @@ sidebar {
     padding: 20px;
 }
 
-.specifics {
-    font-size: small;
-    color: black;
-    background-color: cadetblue;
-}
 
-.attribute{
-    font-size: small;
-    background-color: darkgray;
-    height: 2em;
-}
+
+.header {
+     position: sticky;
+     top: 0;
+     z-index: 2;
+     padding-top: 1em;
+     padding-bottom: 1em;
+ }
+
 label {
     font-size: small;
     word-wrap: normal;
 }
+
