--- a/static/css/details.css
+++ b/static/css/details.css
@@ -22,30 +22,26 @@ h1 {
 .detailcontent {
     margin-left: 0ex;
     padding: 0;
-    height: max-content;
 }
 
 .sidecolumn {
     float: left;
     width: 275px;
-    height: 300px;
     background-color:rgb(207, 204, 204);
-    /* position: fixed; */
     left: 0;
     overflow-x: hidden;
 }
 
 .maincolumn {
-    /* float: left; */
+    float: left;
     margin-left: 275px;
-    height: 300px;
     background-color: white;
-    /* position: fixed; */
 }
 
-/* .attribute {
-    height: 300px;
-} */
+.attribute {
+    margin-left: 10px;
+    background-color: white;
+}
 
 .specifics {
     font-size: small;
@@ -57,4 +53,8 @@ h1 {
     font-size: medium;
     color:blue;
     background-color: white;
+}
+
+.linkbar{
+    height: 2em;
 }
