--- a/templates/details.html
+++ b/templates/details.html
@@ -21,6 +21,10 @@
         <h1>Maryland Maps</h1>
     </div>
 
+    <div class="linkbar">
+        <!-- <p>Home</p> -->
+        <div id="homepage"> </div>
+    </div>
     <div class="detailcontent">
         <div class="sidecolumn">
             <div class="attribute">
@@ -44,19 +48,40 @@
                 <div class="specifics" id="type"></div>
             </div>
         </div>
-        <div class="maincolumn" id="specific_image">            
+        <div class="maincolumn">
+            <div id="specific_image">
+                <input type="file" onchange="previewHandle(this)" />
+                <img id="preview-img" />
+            </div>            
         </div>
     </div>
-
 <script>
 // var thisURL = document.URL;      
 // var getval =thisURL.split('?')[1];    
 // var title_val= getval.split("=")[1];  
-let title_val="ba-057";
+// let title_val="ba-057";
+let title_val='{{ title|tojson }}'
 
 // let a = localStorage.getItem("data-scraper/"+title_val);
 // alert(a);
 // document.getElementById("image").appendChild(elem);
+
+function createButton(){
+    d3.select("#homepage")
+      .selectAll("button")
+      .data(['Home'])
+      .join("button")
+      .text(d => d)
+      .on("click", (e, attributeName) => {
+        // currentAttribute = attributeName;
+        // alert(currentAttribute);
+        window.open("http://127.0.0.1:8080/homepage");
+        // urlbt.search = new URLSearchParams().toString();
+        fetch(urlbt);
+      });
+}
+
+function clickImage(d) {}
 
 let urla = new URL("http://127.0.0.1:8080/details");
   urla.search = new URLSearchParams({"title":title_val}).toString();
@@ -70,6 +95,8 @@ let urla = new URL("http://127.0.0.1:8080/details");
     let publisher_val = data.publisher;
     let type_val = data.type;
 
+    createButton();
+
     document.getElementById("location").innerHTML = "Hello world!"; //location_val;
     document.getElementById("year").innerHTML = year_val;
     document.getElementById("call_number").innerHTML = call_number_val;
@@ -82,26 +109,26 @@ let urla = new URL("http://127.0.0.1:8080/details");
     // elem.setAttribute("width", "520");
     // document.getElementById("image").appendChild(elem);
 
-    let urla_image = new URL("http://127.0.0.1:8080/detailimage");
-    urla_image.search = new URLSearchParams({"title":title_val}).toString();
-    fetch(urla_image)
-    .then(response => response.json())
-    .then(fetchedData => {
-        d3.select("#attributes")
-            .selectAll("img")
-            .data(fetchedData)
-            .join('img')
-            .classed('grid-image', true)
-            .attr('src', (img) => img.src)
-            .attr('height', (img) => "480")
-            .on("click", d);
+    // let urla_image = new URL("http://127.0.0.1:8080/detailimage");
+    // urla_image.search = new URLSearchParams({"title":title_val}).toString();
+    // fetch(urla_image)
+    // .then(response => response.json())
+    // .then(fetchedData => {
+    //     d3.select("#attributes")
+    //         .selectAll("img")
+    //         .data(fetchedData)
+    //         .join('img')
+    //         .classed('grid-image', true)
+    //         .attr('src', (img) => img.src)
+    //         .attr('height', (img) => "480")
+    //         .on("click", clickImage);
 
         // var elem = document.createElement("img");
         // elem.setAttribute("src", fetchedData.src);
         // elem.setAttribute("height", "480");
         // elem.setAttribute("width", "560");
         // document.getElementById("specific_image").appendChild(elem);
-    }).catch(function(err) {alert(err)});
+    // }).catch(function(err) {alert(err)});
     
     // var imageNode = document.getElementById("specific_image");
     // imageNode.setAttribute
