--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
 
     <link rel="stylesheet" href="/static/css/main.css"/>
     <link rel="stylesheet" href="/static/css/imagegrid.css"/>
+    <link rel="stylesheet" href="/static/css/modals.css"/>
 </head>
 <body>
 <div class="container" id="app">
@@ -38,7 +39,7 @@
     <div class="main">
         <filters></filters>
         <image-grid></image-grid>
-        <div id="image-grid"></div>
+        <image-view></image-view>
     </div>
 </div>
 
