--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="/static/css/main.css"/>
     <link rel="stylesheet" href="/static/css/imagegrid.css"/>
     <link rel="stylesheet" href="/static/css/modals.css"/>
+    <link rel="stylesheet" href="/static/css/details.css"/>
 </head>
 <body>
     <div class="container" id="app">
