--- a/static/css/imagegrid.css
+++ b/static/css/imagegrid.css
@@ -3,6 +3,7 @@
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
+    padding: 20px;
 }
 .grid-image {
     flex: 0 1 auto;
