--- a/static/css/main.css
+++ b/static/css/main.css
@@ -39,14 +39,13 @@ h1 {
 }
 
 
-
 .header {
-     position: sticky;
-     top: 0;
-     z-index: 2;
-     padding-top: 1em;
-     padding-bottom: 1em;
- }
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
 
 label {
     font-size: small;
@@ -54,34 +53,33 @@ label {
 }
 
 .range-slider {
-    width: 250px;
+    width: 325px;
 }
-
-
 
 
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  text-align: left;
-  border: none;
-  outline: none;
-  transition: 0.4s;
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+    font-size: 18px;
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active, .accordion:hover {
-  background-color: #ccc;
+    background-color: #ccc;
 }
 
 /* Style the accordion panel. Note: hidden by default */
 .panel {
-  padding: 0 18px;
-  background-color: white;
-  display: none;
-  overflow: hidden;
+    padding: 0 18px;
+    background-color: white;
+    display: none;
+    overflow: hidden;
 }
