aesthetic design changes

--- a/static/css/controls.css
+++ b/static/css/controls.css
@@ -39,7 +39,7 @@
 
 /* When the checkbox is checked, add a blue background */
 .checkbox-container input:checked ~ .checkmark {
-  background-color: #2196F3;
+  background-color: var(--lighter-dominant-color);
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
