--- a/static/css/details.css
+++ b/static/css/details.css
@@ -35,14 +35,15 @@ h1 {
 }
 
 .maincolumn {
-    /* float: left; */
+    float: right;
     position: fixed;
+    width: 100%;
     margin-left: 350px;
+    right: 0;
     background-color: white;
 }
 
 .attribute {
-    margin-left: 10px;
     background-color: white;
 }
 
@@ -60,5 +61,5 @@ h1 {
 }
 
 .detailcontent img {
-
+    width: calc(100% - 350px);
 }
