--- a/static/css/details.css
+++ b/static/css/details.css
@@ -1,24 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
-
-* {
-    font-family: 'Open Sans', sans-serif;
-}
-
-.header {
-    position: sticky;
-    top: 0;
-    z-index: 2;
-    padding-top: 1em;
-    padding-bottom: 1em;
-}
-
-h1 {
-    font-weight: bolder;
-    font-size: x-large;
-    margin-right: 1em;
-}
-
-
 /* details css */
 .detailcontent {
     margin-left: 0;
@@ -56,10 +35,10 @@ h1 {
 
 .parametername{
     font-size: medium;
-    color:blue;
+    color: var(--bold-accent-color);
     background-color: white;
 }
 
 .detailcontent img {
-    width: calc(100% - 350px);
+    width: calc(100% - 250px);
 }
