--- a/static/css/imagegrid.css
+++ b/static/css/imagegrid.css
@@ -1,11 +1,75 @@
 #image-grid {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     padding: 20px;
 }
-.grid-image {
+
+.grid-item {
     flex: 0 1 auto;
     padding: 5px;
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+}
+
+.grid-item:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.grid-image {
+    object-fit: cover;
+    margin-bottom: 1em;
+}
+
+.image-description {
+    padding-left: 3px;
+    padding-right: 3px;
+    height: 2em;
+    font-size: x-small;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+/*.grid-item:hover .image-description {
+    -moz-animation: scroll-left 5s linear infinite;
+    -webkit-animation: scroll-left 5s linear infinite;
+    animation: scroll-left 5s linear infinite;
+}*/
+
+@-moz-keyframes scroll-left {
+    0% {
+        -moz-transform: translateX(0);
+    }
+    100% {
+        -moz-transform: translateX(-100%);
+    }
+}
+
+@-webkit-keyframes scroll-left {
+    0% {
+        -webkit-transform: translateX(0);
+    }
+    100% {
+        -webkit-transform: translateX(-100%);
+    }
+}
+
+@keyframes scroll-left {
+    0% {
+        -moz-transform: translateX(0); /* Browser bug fix */
+        -webkit-transform: translateX(0); /* Browser bug fix */
+        transform: translateX(0);
+    }
+    100% {
+        -moz-transform: translateX(-100%); /* Browser bug fix */
+        -webkit-transform: translateX(-100%); /* Browser bug fix */
+        transform: translateX(-100%);
+    }
 }
